--- a/ConsoleLog/wwwroot/css/Sections.css
+++ b/ConsoleLog/wwwroot/css/Sections.css
@@ -12,7 +12,7 @@
     width: 17%; /* Ajuste a largura conforme necessário */
     background: #f2f2f2;
     padding: 10px;
-    height: 80vh; /* Altura máxima para a barra lateral */
+    height: 60vh; /* Altura máxima para a barra lateral */
     overflow-y: auto; /* Barra de rolagem vertical se necessário */
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -61,7 +61,7 @@
     flex-grow: 1;
     padding: 10px;
     background: white;
-    height: 80vh; /* Altura máxima para o contêiner de logs */
+    height: 60vh; /* Altura máxima para o contêiner de logs */
     overflow-y: auto; /* Barra de rolagem vertical se necessário */
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -139,6 +139,7 @@
     box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
 }
 
+
 /* Adicionando ícone personalizado ao select */
 .filter-type {
     -webkit-appearance: none;
@@ -168,6 +169,26 @@
 .filter-button:hover {
     background-color: #e2e2e2; /* Mudança sutil de cor ao passar o mouse */
 }
+
+
+/* ----SECTION INFORMATION-----*/
+
+.toggle-logs-update {
+    padding: 5px 10px;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+    /* Opcional: estilos para quando o botão está ativo */
+    .toggle-logs-update.active {
+        color: #4CAF50; /* Verde, ou qualquer cor que represente o "ativo" */
+    }
+
+/*------------------------------*/
+
+
 
 
 
