Ajuste JS e remocao de codigos

--- a/ConsoleLog/Views/Home/Index.cshtml
+++ b/ConsoleLog/Views/Home/Index.cshtml
@@ -98,6 +98,8 @@
         var obterLogUrl = '@Url.Action("ObterLog", "Home")';
         var indexSistemas = '@Url.Action("ProcessarSistemas", "Home")';
         var index = '@Url.Action("Index", "Home")';
+        var selecioneSistemaFiltrado = '@Url.Action("SearchLogFilter", "Home")';
+
         
     </script>
     <script src="~/js/LogJS.js" ></script>
