Resolvendo problema de path ir nulo ao filtrar log

--- a/ConsoleLog/Views/Home/SearchLog.cshtml
+++ b/ConsoleLog/Views/Home/SearchLog.cshtml
@@ -3,18 +3,17 @@
 
 
 <div class="logs-container">
-    @using (Html.BeginForm("SearchLog", "Home", FormMethod.Post, new { id = "filterForm", @class = "search-container" }))
-    {
+    <div class="search-container" id="filterForm">
         <select id="filterType" name="filterType" class="filter-type">
             <option value="Status">Status</option>
             <option value="Descricao">Descrição</option>
             <option value="Date">Data</option>
         </select>
         <input type="search" id="filterValue" name="filterValue" placeholder="Digite o valor do filtro" class="search-input">
-        <button type="submit" class="filter-button">
+        <button type="button" id="searchButton" class="filter-button">
             <i class="fas fa-search"></i>
         </button>
-    }
+    </div>
 
 
     @if (Model.ListLogs != null && Model.ListLogs.Any())
@@ -33,3 +32,5 @@
 
 
 </div>
+
+@await Component.InvokeAsync("Notyf")
