Notificacao funcionando e redireiconando corretamente

--- a/ConsoleLog/Views/Home/Index.cshtml
+++ b/ConsoleLog/Views/Home/Index.cshtml
@@ -99,6 +99,7 @@
         
     </script>
     <script src="~/js/LogJS.js" ></script>
+    @await Component.InvokeAsync("Notyf")
 
 </body>
 </html>
