ajuste para obter logs pela session

--- a/ConsoleLog/Views/Home/Index.cshtml
+++ b/ConsoleLog/Views/Home/Index.cshtml
@@ -87,7 +87,7 @@
 
     <footer class="footer">
         <div class="container">
-            <img src="img/mascote-preview.png" class="icone-mascote" />
+            <img src="~/img/mascote-preview.png" class="icone-mascote" />
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
