COnseugindo exibir os logs atraves do filtro

--- a/ConsoleLog/Views/Home/Index.cshtml
+++ b/ConsoleLog/Views/Home/Index.cshtml
@@ -78,9 +78,9 @@
     </div>
     <br />
 
-        @{
-            Html.RenderPartial("SearchLog", Model);
-        }
+        <div class="logs-container">
+            @Html.Partial("SearchLog", Model)
+        </div>
 
 </section>
    
