--- a/ConsoleLog/Views/Home/Index.cshtml
+++ b/ConsoleLog/Views/Home/Index.cshtml
@@ -55,7 +55,9 @@
     <section class="section-information" style="text-align: right; padding-right: 1rem;">
         <button id="toggleLogsUpdate" class="toggle-logs-update">
             <i class="fas fa-play"></i>
-            <p>Ativar Visualização em Tempo Real</p>
+            <p>
+                Enable Real-Time Preview
+            </p>
         </button>
     </section>
 
